tests/expectations/compiler/integers/i16/negate_min_fail.out
Error [ESAZ0374006]: Unary operation `-32768i16.neg()` failed at compile time: negation overflow.
    --> compiler-test:8:16
     |
   8 |         return -a; // This line attempts to return 32768i16 however, the largest i16 value is 32767i16.
     |                ^^
